@startuml

title __ADAPTER's Class Diagram__\n

  namespace com.example.shanifinor_project {
    namespace ui.adapter {
      class com.example.shanifinor_project.ui.adapter.GridViewAnswerAdapter {
          - answerCharacter : char[]
          - context : Context
          + GridViewAnswerAdapter()
          + getCount()
          + getItem()
          + getItemId()
          + getView()
      }
    }
  }
  

  namespace com.example.shanifinor_project {
    namespace ui.adapter {
      class com.example.shanifinor_project.ui.adapter.GridViewSuggestAdapter {
          - context : Context
          - database : FirebaseDatabase
          - pressCount : Integer
          - suggestSource : List<String>
          + GridViewSuggestAdapter()
          + getCount()
          + getItem()
          + getItemId()
          + getSuggestSource()
          + getView()
          + setSuggestSource()
      }
    }
  }
  

  namespace com.example.shanifinor_project {
    namespace ui.adapter {
      class com.example.shanifinor_project.ui.adapter.WinningsChartAdapter {
          - winnings : ArrayList<UserDao>
          + WinningsChartAdapter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.example.shanifinor_project {
    namespace ui.adapter {
      class com.example.shanifinor_project.ui.adapter.WinningsChartAdapter.WinViewHolder {
          + nameTextView : TextView
          + placeTextView : TextView
          + playerImageView : ImageView
          + playerNumWinningsTextView : TextView
          + WinViewHolder()
      }
    }
  }
  

  com.example.shanifinor_project.ui.adapter.GridViewAnswerAdapter -up-|> android.widget.BaseAdapter
  com.example.shanifinor_project.ui.adapter.GridViewSuggestAdapter -up-|> android.widget.BaseAdapter
  com.example.shanifinor_project.ui.adapter.GridViewSuggestAdapter o-- com.example.shanifinor_project.ui.screens.GameActivity : gameActivity
  com.example.shanifinor_project.ui.adapter.WinningsChartAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.shanifinor_project.ui.adapter.WinningsChartAdapter +-down- com.example.shanifinor_project.ui.adapter.WinningsChartAdapter.WinViewHolder
  com.example.shanifinor_project.ui.adapter.WinningsChartAdapter.WinViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
